# dormitoryIOT-edge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp  common.hpp  dormitory.cpp  dormitory.hpp  mqtt.cpp  mqtt.hpp
docs/: message.md  record.md
pkg/message/: CMakeLists.txt  dormitory.cpp  dormitory.hpp  message.cpp  message.hpp  mqtt.cpp  mqtt.hpp  split.cpp  split.hpp  threadpool.cpp  threadpool.hpp
src/: message.cpp
test/: pub_test  sub_test  test_design.md  test_method.md
